[tool.poetry]
name = "nebula-analysis"
version = "0.1.0"
description = ""
authors = ["Dennis Trautwein <git@dtrautwein.eu>"]
readme = "README.md"
packages = [{include = "nebula_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.5"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
seaborn = "^0.12.1"
numpy = "^1.24.0"
toml = "^0.10.2"
Jinja2 = "^3.0.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
