[tool.poetry]
name = "gala"
version = "0.1.0"
description = ""
authors = ["Dennis Trautwein <git@dtrautwein.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.46"
seaborn = "^0.12.2"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
pandas = "^1.5.2"
py-multihash = "^2.0.1"
binary-trie = "^0.0.9"
jupyter = "^1.0.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
