[tool.poetry]
name = "geoip"
version = "0.1.0"
description = ""
authors = ["Dennis Trautwein <nebula@dtrautwein.eu>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
ipykernel = "^6.0.1"
geoip2 = "^4.2.0"
matplotlib = "^3.4.2"
multiaddr = "^0.0.9"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
