[tool.poetry]
name = "nebula-report"
version = "0.1.0"
description = "Scripts to generate a weekly report"
authors = ["Dennis Trautwein <git@dtrautwein.eu>"]

[tool.poetry.dependencies]
python = "3.9"
psycopg2 = "^2.9.1"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
seaborn = "^0.11.2"
numpy = "^1.21.3"
toml = "^0.10.2"
requests = "^2.26.0"
netaddr = "^0.8.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
