[tool.poetry]
name = "nebula-report"
version = "0.1.0"
description = "Scripts to generate a weekly report"
authors = ["Dennis Trautwein <git@dtrautwein.eu>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.5"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
seaborn = "^0.12.1"
numpy = "^1.23.5"
toml = "^0.10.2"
Jinja2 = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
